--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,13 +1,9 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
-/* .p-highlight .p-menubar-item-content {
-  color: var(--p-menubar-item-focus-color);
-  background: var(--p-menubar-item-focus-background);
-} */
-
-/* .p-highlight .p-menubar-item-content .p-menubar-item-icon,
-.p-highlight.p-menubar-item:not(.p-disabled)
-  > .p-menubar-item-content:hover
-  .p-menubar-item-icon {
-  color: #1e293b !important;
-} */
+.glassmorphism {
+  backdrop-filter: blur(16px) saturate(180%) !important;
+  -webkit-backdrop-filter: blur(16px) saturate(180%) !important;
+  background-color: rgba(255, 255, 255, 0.62) !important;
+  border-radius: 12px !important;
+  border: 1px solid rgba(209, 213, 219, 0.3) !important;
+}
