--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,6 +1,14 @@
 @import 'tailwindcss';
 
-.glassmorphism {
+.glassmorphism-dark {
+  backdrop-filter: blur(16px) saturate(180%) !important;
+  -webkit-backdrop-filter: blur(16px) saturate(180%) !important;
+  background-color: rgba(17, 25, 40, 0.62) !important;
+  border-radius: 12px !important;
+  border: 1px solid rgba(255, 255, 255, 0.125) !important;
+}
+
+.glassmorphism-light {
   backdrop-filter: blur(16px) saturate(180%) !important;
   -webkit-backdrop-filter: blur(16px) saturate(180%) !important;
   background-color: rgba(255, 255, 255, 0.62) !important;
