--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -16,6 +16,14 @@
   border: 1px solid rgba(209, 213, 219, 0.3) !important;
 }
 
+.text-white * {
+  color: white !important;
+}
+
+.text-black * {
+  color: black !important;
+}
+
 .p-datepicker {
   padding: 0 !important;
 }
