--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -11,6 +11,7 @@ body,
   background-color: rgba(17, 25, 40, 0.62) !important;
   border-radius: 12px !important;
   border: 1px solid rgba(255, 255, 255, 0.125) !important;
+  mask-image: radial-gradient(white, black) !important;
 }
 
 .glassmorphism-light {
@@ -19,6 +20,7 @@ body,
   background-color: rgba(255, 255, 255, 0.62) !important;
   border-radius: 12px !important;
   border: 1px solid rgba(209, 213, 219, 0.3) !important;
+  mask-image: radial-gradient(white, black) !important;
 }
 
 .text-white * {
@@ -91,4 +93,30 @@ media-controls.vds-controls {
 
 .gr-btn-container-foreground {
   box-shadow: 0 0 3px 0 #eee !important;
+}
+
+@supports (-webkit-touch-callout: none) {
+  .glassmorphism-dark {
+    -webkit-backdrop-filter: blur(16px) saturate(180%) !important;
+    backdrop-filter: blur(16px) saturate(180%) !important;
+    background-color: rgba(17, 25, 40, 0.62) !important;
+    background: linear-gradient(
+      rgba(17, 25, 40, 0.62),
+      rgba(17, 25, 40, 0.62)
+    ) !important;
+    position: relative !important;
+    -webkit-mask-image: -webkit-radial-gradient(white, black) !important;
+  }
+
+  .glassmorphism-light {
+    -webkit-backdrop-filter: blur(16px) saturate(180%) !important;
+    backdrop-filter: blur(16px) saturate(180%) !important;
+    background-color: rgba(255, 255, 255, 0.62) !important;
+    background: linear-gradient(
+      rgba(255, 255, 255, 0.62),
+      rgba(255, 255, 255, 0.62)
+    ) !important;
+    position: relative !important;
+    -webkit-mask-image: -webkit-radial-gradient(white, black) !important;
+  }
 }
