--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -126,3 +126,17 @@ media-controls.vds-controls {
 .h-16 {
   height: calc(var(--spacing) * 16) !important;
 }
+
+.p-toolbar-start,
+.p-toolbar-center,
+.p-toolbar-end {
+  flex: 1 0 0;
+}
+
+.p-toolbar-center {
+  justify-content: center;
+}
+
+.p-toolbar-end {
+  justify-content: flex-end;
+}
